--- a/TestDemo/Demos/AnimationDemo.xaml
+++ b/TestDemo/Demos/AnimationDemo.xaml
@@ -6,7 +6,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
              xmlns:local="clr-namespace:TestDemo.Demos"
-             mc:Ignorable="d" 
+             mc:Ignorable="d" Background="White" Width="400" Height="600"
              d:DesignHeight="800" d:DesignWidth="800">
 
     <UserControl.Resources>
